# tuipet

./: .gitignore  .lint-baseline  ADVENTURE_ANIM_AUDIT_2026_07_22.md  ADVENTURE_ENERGY_AUDIT_2026_07_23.md  ANIMATION_SPEC.md  AUDIT_2026_07_19.md  AUTHENTIC_REBUILD.md  CANON_RESTORATION_2026_07_23.md  CHANGELOG.md  DISTRIBUTION_PLAN_2026_07_24.md  DVPET_SOURCE.md  GAMEPLAY_POLISH_2026_07_22.md  GHOST_CUP_SPEC.md  ITEMS_REFACTOR_2026_07_23.md  ITEMS_REFACTOR_PLAN_2026_07_23.md  ITEM_DIVERSITY_AUDIT_2026_07_23.md  LICENSE  QOL_POLISH_2026_07_23.md  README.md  REAL_VPET_ARC_2026_07_23.md  TUIPET_AUDIT.md  TUIPET_ITEMS.md  app.py  c2.txt  c3.txt  c4.txt  c5.txt  check.sh  deploy.sh  install.sh  pyproject.toml
corpus/fan/wayland-vpets/: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gersemirc  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  bongocat.conf.example  cmake-format.yaml
corpus/fan/wayland-vpets/.github/workflows/: build.yml  release.yml
corpus/fan/wayland-vpets/Dockerfiles/: alpine  archlinux  debian  fedora  gentoo  nix-test  opensuse
corpus/fan/wayland-vpets/assets/: .gitignore  COPYRIGHT.md  PMD_CREDITS.txt  README.md
corpus/fan/wayland-vpets/cmake/: CPM.cmake
corpus/fan/wayland-vpets/docs/: begin.base.bongocat.conf.md  bongocat-all.conf.md  bongocat-all.md  bongocat-dm-classic.conf.md  bongocat-dm-classic.md  bongocat-dm.conf.md  bongocat-dm.md  bongocat-find-devices.md  bongocat-ms-agent.conf.md  bongocat-ms-agent.md  bongocat-pkmn.conf.md  bongocat-pkmn.md  bongocat.conf.md  bongocat.md  configuration.md  end.base.bongocat.conf.md  include.lua  usage.md
corpus/fan/wayland-vpets/docs/fragments/: common.md  copyright.md  evol-all.md  evol-dm.md  evol-pkmn.md  examples-basic.md  files.md  options-all.md  options-dm.md  options-ms-agent.md  options-pkmn.md  options.md  set-bongocat.md  set-dm.md  set-dm20.md  set-dmall.md  set-dmc.md  set-dmx.md  set-min-dm.md  set-misc.md  set-more-ms-agent.md  set-ms-agent.md  set-pen.md  set-pen20.md  set-pkmn.md  set-pmd.md  usage-custom.md
corpus/fan/wayland-vpets/examples/: EXAMPLES.md  animated-digimon.bongocat.conf  background-digimon.bongocat.conf  clippy.bongocat.conf  cpu-digimon.bongocat.conf  digimon.bongocat.conf  dmc.bongocat.conf  evol-digimon.bongocat.conf  idle-only-digimon.bongocat.conf  minimal.bongocat.conf  moving-digimon.bongocat.conf  moving-neko.bongocat.conf  neko.bongocat.conf  pmd.bongocat.conf  pokemon.bongocat.conf
corpus/fan/wayland-vpets/examples/custom-sprite-sheets/: README.md  ferret.bongocat.conf  neko.bongocat.conf  run-neko.bongocat.conf  runcat.bongocat.conf  skink.bongocat.conf  witch.bongocat.conf
corpus/fan/wayland-vpets/examples/test/: invalid.test.bongocat.conf  invalid2.test.bongocat.conf  test.bongocat.conf  test.bongocat.conf2  test2.bongocat.conf
corpus/fan/wayland-vpets/include/config/: config.h  config_watcher.h
corpus/fan/wayland-vpets/include/core/: bongocat.h
corpus/fan/wayland-vpets/include/embedded_assets/: assets.h  embedded_image.h
corpus/fan/wayland-vpets/include/graphics/: animation.h  animation_context.h  animation_shared_memory.h  animation_thread_context.h  drawing.h  embedded_assets_dms.h  embedded_assets_pkmn.h  sprite_sheet.h
corpus/fan/wayland-vpets/include/image_loader/: load_images.h  load_svgs.h
corpus/fan/wayland-vpets/include/platform/: input.h  input_context.h  input_shared_memory.h  update.h  update_context.h  update_shared_memory.h  wayland-protocols.hpp  wayland.h  wayland_callbacks.h  wayland_context.h  wayland_setups.h  wayland_shared_memory.h  wayland_thread_context.h
corpus/fan/wayland-vpets/include/utils/: error.h  memory.h  random.h  system_error.h  system_memory.h  time.h
corpus/fan/wayland-vpets/lib/: nanosvg.h  nanosvgrast.h  pngle.h
corpus/fan/wayland-vpets/nix/: NIXOS.md  README.md  common.nix  default.nix  home-module.nix  nixos-module.nix  shell.nix
corpus/fan/wayland-vpets/protocols/: CMakeLists.txt  fractional-scale-v1.xml  viewporter.xml  wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  xdg-output-unstable-v1.xml  xdg-shell.xml  zwlr-layer-shell-v1-client-protocol.h
corpus/fan/wayland-vpets/scripts/: all_crop_spritesheets.sh  all_generate_embedded_assets.sh  all_generate_set_docs.sh  auto_center_sprites.sh  auto_even_spritesheet.sh  check_readonly_sections.sh  crop_spritesheet.sh  even_sprite_sheet.sh  find_input_devices.sh  generate_custom_init_anim.sh  generate_embedded_assets.sh  generate_embedded_assets_dm_evol.sh  generate_embedded_assets_dmall_evol.sh  generate_embedded_assets_pkmn_evol.sh  generate_embedded_assets_pmd_evol.sh  generate_embedded_custom_assets.sh  generate_init_anim.sh  generate_set_doc.sh  make-pmd-sprites.sh  sprite_sheet_revert_packer.sh  update_sprites.sh
corpus/fan/wayland-vpets/scripts/tests/: test_all.sh  test_bongocat.sh  test_bongocat_11.sh  test_bongocat_12.sh  test_bongocat_13.sh  test_bongocat_14.sh  test_bongocat_15.sh  test_bongocat_16.sh  test_bongocat_2.sh  test_bongocat_20.sh  test_bongocat_3.sh  test_bongocat_4.sh  test_bongocat_5.sh  test_bongocat_6.sh  test_bongocat_7.sh  test_bongocat_8.sh  test_bongocat_9.sh  test_bongocat_demo.sh  test_bongocat_demo_2.sh  test_bongocat_demo_3.sh  test_bongocat_demo_4.sh  test_docker_build.sh  test_nix_build.sh  test_nix_build_docker.sh  test_ram.sh  test_toggle.sh
corpus/fan/wayland-vpets/src/: CMakeLists.txt
corpus/fan/wayland-vpets/src/config/: config.cpp  config_watcher.cpp
corpus/fan/wayland-vpets/src/core/: main.cpp
corpus/fan/wayland-vpets/src/graphics/: animation.cpp  animation_init.cpp  bar.cpp  bar.h  drawing_images.cpp
corpus/fan/wayland-vpets/src/image_loader/: CMakeLists.txt  load_images.cpp  load_images_hybrid.cpp  load_images_pngle.cpp  load_images_stb_image.cpp  load_svgs.cpp  miniz.c  nanosvg.c  pngle.c  stb_image.c
corpus/fan/wayland-vpets/src/platform/: input.cpp  update.cpp  (+7 more)
corpus/fan/wayland-vpets/tests/: CMakeLists.txt  test_config.cpp  test_config_2.cpp  test_config_3.cpp  test_memory.cpp  test_utils.cpp
(+696 files in other folders)
